[package]
name = "sign-in"
version = "0.1.0"
edition = "2021"
authors = ["Kiritan <kiritantakechi@gmail.com>"]
description = "签到工具"
repository = ""
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0"
colored = "2.1.0"
dotenv = "0.15"
env_logger = "0.10.1"
futures = "0.3.29"
log = "0.4.20"
md-5 = "0.10.6"
once_cell = "1.19"
rayon = "1.8.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
