[package]
name = "sign-in"
version = "0.1.0"
edition = "2024"
authors = ["Kiritan <kiritantakechi@gmail.com>"]
description = "签到工具"
repository = ""
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0"
colored = "3.0"
dotenv = "0.15"
env_logger = "0.11"
futures = "0.3.31"
log = "0.4.26"
md-5 = "0.10.6"
once_cell = "1.21"
rayon = "1.10.0"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
